# PromptSQL

./: .commitlintrc.yml  .env.example  .gitignore  .golangci.yml  Makefile  go.work  package.json  services.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
apps/ai-orchestrator/: Dockerfile  package.json  pyproject.toml  tsconfig.json
apps/ai-orchestrator/src/: config.py  config.ts  index.ts  main.py  metrics.ts  telemetry.ts
apps/ai-orchestrator/src/__tests__/integration/: graph-e2e.test.ts
apps/ai-orchestrator/src/__tests__/unit/: adversarial-prompts.test.ts  input-sanitizer.test.ts  llm-provider.test.ts  policy-schemas.test.ts
apps/ai-orchestrator/src/graph/: index.ts  pep-index.ts  pep-schemas.ts  schemas.ts
apps/ai-orchestrator/src/graph/nodes/: audit-explainer.ts  compiler.ts  human-approval.ts  input-sanitizer.ts  intent-parser.ts  policy-drafter.ts  policy-validator.ts  schema-resolver.ts  simulator.ts
apps/ai-orchestrator/src/graph/nodes/pep/: ast-validator.ts  cost-estimator.ts  input-sanitizer.ts  permission-resolver.ts  proxy-executor.ts  result-formatter.ts  retriever.ts  sql-drafter.ts
apps/ai-orchestrator/src/llm/: ast-provider.ts  provider.ts
apps/ai-orchestrator/src/middleware/: token-budget.ts
apps/ai-orchestrator/src/routes/: health.ts  pap.ts  pep.ts
docs/: implementation-plan.md  observability.md
infra/: docker-compose.override.yml.example  docker-compose.yml
migrations/: 0001_extensions.down.sql  (+39 more)
(+521 files in other folders)
